manifest/wordpress/wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: gcr.io/spartan-setting-369416/wordpress
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wp-pv-claim
          mountPath: /var/www/html
      volumes:
      - name: wp-pv-claim
        persistentVolumeClaim:
          claimName: wp-pv-claim
